# MawDiscord

./: .gitignore  README  README.md  abliterate.py  cogvlm-abliterate.py  cpp-experiment.py  decrypter.py  main-exl2.py  main-vllm.py  main.py  pyproject.toml  quantize-eetq.py  quantize-exl2.py  quantize-exl2.sh  quantize-fp8.py  quantize-gptq.py  quantize-hqq.py  recorder.py  requirements.txt  speech.py  speech_models.py  test_engine.py  util.py  views.py  vllm-experiment.py  vram.py
Speech/: text_utils.py
archive/: main-hf.py  main-llama.py  main-vllm.py
archive/maw1/: decrypter.py  main-exl2.py  main-hf.py  main-llama.py  main-vllm.py  recorder.py  requirements.txt  speech.py  speech_models.py  vram.py
character/: auto.py  config.py  defaults.py  history.py  request.py  tools.py  views.py
modeling/: counter.py  exl2model.py  exl3model.py  model_handler.py  tokenize.py  vram.py
modeling/model_handler/: base.py  exl2.py  exl3.py
modelling/: exl2model.py  model_handler.py  vram.py
quantization/: quantize-exl2.sh
synapse/: container.py  defaults.py  neuron.py  request.py  views.py
