[project]
name = "mawdiscord"
version = "2.0.0a"
description = "Maw for Discord"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clean-text>=0.7.1",
    "discord-py>=2.7.1",
    "exllamav3>=0.0.39",
    "flash-attn>=2.7.4.post1",
    "ftfy>=6.3.1",
    "pillow>=12.2.0",
    "podman>=5.8.0",
    "psutil>=7.2.2",
    "pydantic==2.11.0",
    "python-dotenv>=1.0.1",
    "requests>=2.34.2",
    "ruff>=0.15.16",
    "tokenizers>=0.21.0",
    "torch>=2.12",
    "transformers>=4.49.0",
    "ty>=0.0.44",
    "ujson>=5.12.1",
]
